--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
+  "functions": {
+    "api/arcep.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "source": "/api/arcep",
+      "destination": "/api/arcep.js"
     }
   ]
 }
